examples/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements objective statements
Rule 2     program -> statements objective
Rule 3     program -> statements
Rule 4     program -> empty
Rule 5     statements -> statement NL
Rule 6     statements -> statements statement NL
Rule 7     statement -> create
Rule 8     statement -> constraint
Rule 9     statement -> empty
Rule 10    objective -> SENSE expression NL
Rule 11    objective -> SENSE expression NL SUBJ TO NL
Rule 12    create -> DIMENSION ID
Rule 13    create -> DIMENSIONS idlist
Rule 14    create -> VARIABLE array
Rule 15    create -> PARAMETER array
Rule 16    create -> VARIABLES arraylist
Rule 17    create -> PARAMETERS arraylist
Rule 18    create -> PARAMETER array SIGN
Rule 19    array -> ID LPAREN dimlist RPAREN
Rule 20    array -> ID
Rule 21    dimlist -> dimlist COMMA DIM_ID
Rule 22    dimlist -> dimlist COMMA INTEGER
Rule 23    dimlist -> DIM_ID
Rule 24    dimlist -> INTEGER
Rule 25    idlist -> idlist ID
Rule 26    idlist -> ID
Rule 27    arraylist -> arraylist array
Rule 28    arraylist -> array
Rule 29    constraint -> expression EQ expression
Rule 30    constraint -> expression LEQ expression
Rule 31    constraint -> expression GEQ expression
Rule 32    constraint -> expression LEQ expression LEQ expression
Rule 33    constraint -> expression GEQ expression GEQ expression
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression MINUS expression
Rule 36    expression -> expression DIVIDE CONSTANT
Rule 37    expression -> expression DIVIDE INTEGER
Rule 38    expression -> expression TIMES expression
Rule 39    expression -> LPAREN expression RPAREN
Rule 40    expression -> MINUS expression
Rule 41    expression -> expression TRANSPOSE
Rule 42    expression -> CONSTANT
Rule 43    expression -> INTEGER
Rule 44    expression -> VAR_ID
Rule 45    expression -> PARAM_ID
Rule 46    expression -> SUM LPAREN expression RPAREN
Rule 47    expression -> ATOM LPAREN arglist RPAREN
Rule 48    arglist -> arglist COMMA expression
Rule 49    arglist -> expression
Rule 50    empty -> <empty>

Terminals, with rules where they appear

ATOM                 : 47
COMMA                : 21 22 48
COMMENT              : 
CONSTANT             : 36 42
DIMENSION            : 12
DIMENSIONS           : 13
DIM_ID               : 21 23
DIVIDE               : 36 37
EQ                   : 29
GEQ                  : 31 33 33
ID                   : 12 19 20 25 26
INTEGER              : 22 24 37 43
LEQ                  : 30 32 32
LPAREN               : 19 39 46 47
MINUS                : 35 40
NL                   : 5 6 10 11 11
PARAMETER            : 15 18
PARAMETERS           : 17
PARAM_ID             : 45
PLUS                 : 34
RPAREN               : 19 39 46 47
SENSE                : 10 11
SIGN                 : 18
SUBJ                 : 11
SUM                  : 46
TIMES                : 38
TO                   : 11
TRANSPOSE            : 41
VARIABLE             : 14
VARIABLES            : 16
VAR_ID               : 44
error                : 

Nonterminals, with rules where they appear

arglist              : 47 48
array                : 14 15 18 27 28
arraylist            : 16 17 27
constraint           : 8
create               : 7
dimlist              : 19 21 22
empty                : 4 9
expression           : 10 11 29 29 30 30 31 31 32 32 32 33 33 33 34 34 35 35 36 37 38 38 39 40 41 46 48 49
idlist               : 13 25
objective            : 1 2
program              : 0
statement            : 5 6
statements           : 1 1 2 3 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements objective statements
    (2) program -> . statements objective
    (3) program -> . statements
    (4) program -> . empty
    (5) statements -> . statement NL
    (6) statements -> . statements statement NL
    (50) empty -> .
    (7) statement -> . create
    (8) statement -> . constraint
    (9) statement -> . empty
    (12) create -> . DIMENSION ID
    (13) create -> . DIMENSIONS idlist
    (14) create -> . VARIABLE array
    (15) create -> . PARAMETER array
    (16) create -> . VARIABLES arraylist
    (17) create -> . PARAMETERS arraylist
    (18) create -> . PARAMETER array SIGN
    (29) constraint -> . expression EQ expression
    (30) constraint -> . expression LEQ expression
    (31) constraint -> . expression GEQ expression
    (32) constraint -> . expression LEQ expression LEQ expression
    (33) constraint -> . expression GEQ expression GEQ expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression DIVIDE CONSTANT
    (37) expression -> . expression DIVIDE INTEGER
    (38) expression -> . expression TIMES expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression TRANSPOSE
    (42) expression -> . CONSTANT
    (43) expression -> . INTEGER
    (44) expression -> . VAR_ID
    (45) expression -> . PARAM_ID
    (46) expression -> . SUM LPAREN expression RPAREN
    (47) expression -> . ATOM LPAREN arglist RPAREN

    $end            reduce using rule 50 (empty -> .)
    NL              reduce using rule 50 (empty -> .)
    DIMENSION       shift and go to state 11
    DIMENSIONS      shift and go to state 7
    VARIABLE        shift and go to state 18
    PARAMETER       shift and go to state 5
    VARIABLES       shift and go to state 21
    PARAMETERS      shift and go to state 8
    LPAREN          shift and go to state 16
    MINUS           shift and go to state 6
    CONSTANT        shift and go to state 4
    INTEGER         shift and go to state 14
    VAR_ID          shift and go to state 10
    PARAM_ID        shift and go to state 3
    SUM             shift and go to state 2
    ATOM            shift and go to state 17

    statements                     shift and go to state 1
    constraint                     shift and go to state 19
    create                         shift and go to state 9
    program                        shift and go to state 12
    statement                      shift and go to state 13
    expression                     shift and go to state 20
    empty                          shift and go to state 15

state 1

    (1) program -> statements . objective statements
    (2) program -> statements . objective
    (3) program -> statements .
    (6) statements -> statements . statement NL
    (10) objective -> . SENSE expression NL
    (11) objective -> . SENSE expression NL SUBJ TO NL
    (7) statement -> . create
    (8) statement -> . constraint
    (9) statement -> . empty
    (12) create -> . DIMENSION ID
    (13) create -> . DIMENSIONS idlist
    (14) create -> . VARIABLE array
    (15) create -> . PARAMETER array
    (16) create -> . VARIABLES arraylist
    (17) create -> . PARAMETERS arraylist
    (18) create -> . PARAMETER array SIGN
    (29) constraint -> . expression EQ expression
    (30) constraint -> . expression LEQ expression
    (31) constraint -> . expression GEQ expression
    (32) constraint -> . expression LEQ expression LEQ expression
    (33) constraint -> . expression GEQ expression GEQ expression
    (50) empty -> .
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression DIVIDE CONSTANT
    (37) expression -> . expression DIVIDE INTEGER
    (38) expression -> . expression TIMES expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression TRANSPOSE
    (42) expression -> . CONSTANT
    (43) expression -> . INTEGER
    (44) expression -> . VAR_ID
    (45) expression -> . PARAM_ID
    (46) expression -> . SUM LPAREN expression RPAREN
    (47) expression -> . ATOM LPAREN arglist RPAREN

    $end            reduce using rule 3 (program -> statements .)
    SENSE           shift and go to state 25
    DIMENSION       shift and go to state 11
    DIMENSIONS      shift and go to state 7
    VARIABLE        shift and go to state 18
    PARAMETER       shift and go to state 5
    VARIABLES       shift and go to state 21
    PARAMETERS      shift and go to state 8
    NL              reduce using rule 50 (empty -> .)
    LPAREN          shift and go to state 16
    MINUS           shift and go to state 6
    CONSTANT        shift and go to state 4
    INTEGER         shift and go to state 14
    VAR_ID          shift and go to state 10
    PARAM_ID        shift and go to state 3
    SUM             shift and go to state 2
    ATOM            shift and go to state 17

    constraint                     shift and go to state 19
    create                         shift and go to state 9
    statement                      shift and go to state 22
    objective                      shift and go to state 23
    expression                     shift and go to state 20
    empty                          shift and go to state 24

state 2

    (46) expression -> SUM . LPAREN expression RPAREN

    LPAREN          shift and go to state 26


state 3

    (45) expression -> PARAM_ID .

    PLUS            reduce using rule 45 (expression -> PARAM_ID .)
    MINUS           reduce using rule 45 (expression -> PARAM_ID .)
    DIVIDE          reduce using rule 45 (expression -> PARAM_ID .)
    TIMES           reduce using rule 45 (expression -> PARAM_ID .)
    TRANSPOSE       reduce using rule 45 (expression -> PARAM_ID .)
    NL              reduce using rule 45 (expression -> PARAM_ID .)
    EQ              reduce using rule 45 (expression -> PARAM_ID .)
    LEQ             reduce using rule 45 (expression -> PARAM_ID .)
    GEQ             reduce using rule 45 (expression -> PARAM_ID .)
    RPAREN          reduce using rule 45 (expression -> PARAM_ID .)
    COMMA           reduce using rule 45 (expression -> PARAM_ID .)


state 4

    (42) expression -> CONSTANT .

    PLUS            reduce using rule 42 (expression -> CONSTANT .)
    MINUS           reduce using rule 42 (expression -> CONSTANT .)
    DIVIDE          reduce using rule 42 (expression -> CONSTANT .)
    TIMES           reduce using rule 42 (expression -> CONSTANT .)
    TRANSPOSE       reduce using rule 42 (expression -> CONSTANT .)
    NL              reduce using rule 42 (expression -> CONSTANT .)
    EQ              reduce using rule 42 (expression -> CONSTANT .)
    LEQ             reduce using rule 42 (expression -> CONSTANT .)
    GEQ             reduce using rule 42 (expression -> CONSTANT .)
    RPAREN          reduce using rule 42 (expression -> CONSTANT .)
    COMMA           reduce using rule 42 (expression -> CONSTANT .)


state 5

    (15) create -> PARAMETER . array
    (18) create -> PARAMETER . array SIGN
    (19) array -> . ID LPAREN dimlist RPAREN
    (20) array -> . ID

    ID              shift and go to state 28

    array                          shift and go to state 27

state 6

    (40) expression -> MINUS . expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression DIVIDE CONSTANT
    (37) expression -> . expression DIVIDE INTEGER
    (38) expression -> . expression TIMES expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression TRANSPOSE
    (42) expression -> . CONSTANT
    (43) expression -> . INTEGER
    (44) expression -> . VAR_ID
    (45) expression -> . PARAM_ID
    (46) expression -> . SUM LPAREN expression RPAREN
    (47) expression -> . ATOM LPAREN arglist RPAREN

    LPAREN          shift and go to state 16
    MINUS           shift and go to state 6
    CONSTANT        shift and go to state 4
    INTEGER         shift and go to state 14
    VAR_ID          shift and go to state 10
    PARAM_ID        shift and go to state 3
    SUM             shift and go to state 2
    ATOM            shift and go to state 17

    expression                     shift and go to state 29

state 7

    (13) create -> DIMENSIONS . idlist
    (25) idlist -> . idlist ID
    (26) idlist -> . ID

    ID              shift and go to state 30

    idlist                         shift and go to state 31

state 8

    (17) create -> PARAMETERS . arraylist
    (27) arraylist -> . arraylist array
    (28) arraylist -> . array
    (19) array -> . ID LPAREN dimlist RPAREN
    (20) array -> . ID

    ID              shift and go to state 28

    arraylist                      shift and go to state 32
    array                          shift and go to state 33

state 9

    (7) statement -> create .

    NL              reduce using rule 7 (statement -> create .)


state 10

    (44) expression -> VAR_ID .

    PLUS            reduce using rule 44 (expression -> VAR_ID .)
    MINUS           reduce using rule 44 (expression -> VAR_ID .)
    DIVIDE          reduce using rule 44 (expression -> VAR_ID .)
    TIMES           reduce using rule 44 (expression -> VAR_ID .)
    TRANSPOSE       reduce using rule 44 (expression -> VAR_ID .)
    NL              reduce using rule 44 (expression -> VAR_ID .)
    EQ              reduce using rule 44 (expression -> VAR_ID .)
    LEQ             reduce using rule 44 (expression -> VAR_ID .)
    GEQ             reduce using rule 44 (expression -> VAR_ID .)
    RPAREN          reduce using rule 44 (expression -> VAR_ID .)
    COMMA           reduce using rule 44 (expression -> VAR_ID .)


state 11

    (12) create -> DIMENSION . ID

    ID              shift and go to state 34


state 12

    (0) S' -> program .



state 13

    (5) statements -> statement . NL

    NL              shift and go to state 35


state 14

    (43) expression -> INTEGER .

    PLUS            reduce using rule 43 (expression -> INTEGER .)
    MINUS           reduce using rule 43 (expression -> INTEGER .)
    DIVIDE          reduce using rule 43 (expression -> INTEGER .)
    TIMES           reduce using rule 43 (expression -> INTEGER .)
    TRANSPOSE       reduce using rule 43 (expression -> INTEGER .)
    NL              reduce using rule 43 (expression -> INTEGER .)
    EQ              reduce using rule 43 (expression -> INTEGER .)
    LEQ             reduce using rule 43 (expression -> INTEGER .)
    GEQ             reduce using rule 43 (expression -> INTEGER .)
    RPAREN          reduce using rule 43 (expression -> INTEGER .)
    COMMA           reduce using rule 43 (expression -> INTEGER .)


state 15

    (4) program -> empty .
    (9) statement -> empty .

    $end            reduce using rule 4 (program -> empty .)
    NL              reduce using rule 9 (statement -> empty .)


state 16

    (39) expression -> LPAREN . expression RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression DIVIDE CONSTANT
    (37) expression -> . expression DIVIDE INTEGER
    (38) expression -> . expression TIMES expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression TRANSPOSE
    (42) expression -> . CONSTANT
    (43) expression -> . INTEGER
    (44) expression -> . VAR_ID
    (45) expression -> . PARAM_ID
    (46) expression -> . SUM LPAREN expression RPAREN
    (47) expression -> . ATOM LPAREN arglist RPAREN

    LPAREN          shift and go to state 16
    MINUS           shift and go to state 6
    CONSTANT        shift and go to state 4
    INTEGER         shift and go to state 14
    VAR_ID          shift and go to state 10
    PARAM_ID        shift and go to state 3
    SUM             shift and go to state 2
    ATOM            shift and go to state 17

    expression                     shift and go to state 36

state 17

    (47) expression -> ATOM . LPAREN arglist RPAREN

    LPAREN          shift and go to state 37


state 18

    (14) create -> VARIABLE . array
    (19) array -> . ID LPAREN dimlist RPAREN
    (20) array -> . ID

    ID              shift and go to state 28

    array                          shift and go to state 38

state 19

    (8) statement -> constraint .

    NL              reduce using rule 8 (statement -> constraint .)


state 20

    (29) constraint -> expression . EQ expression
    (30) constraint -> expression . LEQ expression
    (31) constraint -> expression . GEQ expression
    (32) constraint -> expression . LEQ expression LEQ expression
    (33) constraint -> expression . GEQ expression GEQ expression
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . DIVIDE CONSTANT
    (37) expression -> expression . DIVIDE INTEGER
    (38) expression -> expression . TIMES expression
    (41) expression -> expression . TRANSPOSE

    EQ              shift and go to state 45
    LEQ             shift and go to state 43
    GEQ             shift and go to state 39
    PLUS            shift and go to state 44
    MINUS           shift and go to state 46
    DIVIDE          shift and go to state 40
    TIMES           shift and go to state 42
    TRANSPOSE       shift and go to state 41


state 21

    (16) create -> VARIABLES . arraylist
    (27) arraylist -> . arraylist array
    (28) arraylist -> . array
    (19) array -> . ID LPAREN dimlist RPAREN
    (20) array -> . ID

    ID              shift and go to state 28

    arraylist                      shift and go to state 47
    array                          shift and go to state 33

state 22

    (6) statements -> statements statement . NL

    NL              shift and go to state 48


state 23

    (1) program -> statements objective . statements
    (2) program -> statements objective .
    (5) statements -> . statement NL
    (6) statements -> . statements statement NL
    (7) statement -> . create
    (8) statement -> . constraint
    (9) statement -> . empty
    (12) create -> . DIMENSION ID
    (13) create -> . DIMENSIONS idlist
    (14) create -> . VARIABLE array
    (15) create -> . PARAMETER array
    (16) create -> . VARIABLES arraylist
    (17) create -> . PARAMETERS arraylist
    (18) create -> . PARAMETER array SIGN
    (29) constraint -> . expression EQ expression
    (30) constraint -> . expression LEQ expression
    (31) constraint -> . expression GEQ expression
    (32) constraint -> . expression LEQ expression LEQ expression
    (33) constraint -> . expression GEQ expression GEQ expression
    (50) empty -> .
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression DIVIDE CONSTANT
    (37) expression -> . expression DIVIDE INTEGER
    (38) expression -> . expression TIMES expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression TRANSPOSE
    (42) expression -> . CONSTANT
    (43) expression -> . INTEGER
    (44) expression -> . VAR_ID
    (45) expression -> . PARAM_ID
    (46) expression -> . SUM LPAREN expression RPAREN
    (47) expression -> . ATOM LPAREN arglist RPAREN

    $end            reduce using rule 2 (program -> statements objective .)
    DIMENSION       shift and go to state 11
    DIMENSIONS      shift and go to state 7
    VARIABLE        shift and go to state 18
    PARAMETER       shift and go to state 5
    VARIABLES       shift and go to state 21
    PARAMETERS      shift and go to state 8
    NL              reduce using rule 50 (empty -> .)
    LPAREN          shift and go to state 16
    MINUS           shift and go to state 6
    CONSTANT        shift and go to state 4
    INTEGER         shift and go to state 14
    VAR_ID          shift and go to state 10
    PARAM_ID        shift and go to state 3
    SUM             shift and go to state 2
    ATOM            shift and go to state 17

    statements                     shift and go to state 49
    constraint                     shift and go to state 19
    create                         shift and go to state 9
    statement                      shift and go to state 13
    expression                     shift and go to state 20
    empty                          shift and go to state 24

state 24

    (9) statement -> empty .

    NL              reduce using rule 9 (statement -> empty .)


state 25

    (10) objective -> SENSE . expression NL
    (11) objective -> SENSE . expression NL SUBJ TO NL
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression DIVIDE CONSTANT
    (37) expression -> . expression DIVIDE INTEGER
    (38) expression -> . expression TIMES expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression TRANSPOSE
    (42) expression -> . CONSTANT
    (43) expression -> . INTEGER
    (44) expression -> . VAR_ID
    (45) expression -> . PARAM_ID
    (46) expression -> . SUM LPAREN expression RPAREN
    (47) expression -> . ATOM LPAREN arglist RPAREN

    LPAREN          shift and go to state 16
    MINUS           shift and go to state 6
    CONSTANT        shift and go to state 4
    INTEGER         shift and go to state 14
    VAR_ID          shift and go to state 10
    PARAM_ID        shift and go to state 3
    SUM             shift and go to state 2
    ATOM            shift and go to state 17

    expression                     shift and go to state 50

state 26

    (46) expression -> SUM LPAREN . expression RPAREN
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression DIVIDE CONSTANT
    (37) expression -> . expression DIVIDE INTEGER
    (38) expression -> . expression TIMES expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression TRANSPOSE
    (42) expression -> . CONSTANT
    (43) expression -> . INTEGER
    (44) expression -> . VAR_ID
    (45) expression -> . PARAM_ID
    (46) expression -> . SUM LPAREN expression RPAREN
    (47) expression -> . ATOM LPAREN arglist RPAREN

    LPAREN          shift and go to state 16
    MINUS           shift and go to state 6
    CONSTANT        shift and go to state 4
    INTEGER         shift and go to state 14
    VAR_ID          shift and go to state 10
    PARAM_ID        shift and go to state 3
    SUM             shift and go to state 2
    ATOM            shift and go to state 17

    expression                     shift and go to state 51

state 27

    (15) create -> PARAMETER array .
    (18) create -> PARAMETER array . SIGN

    NL              reduce using rule 15 (create -> PARAMETER array .)
    SIGN            shift and go to state 52


state 28

    (19) array -> ID . LPAREN dimlist RPAREN
    (20) array -> ID .

    LPAREN          shift and go to state 53
    ID              reduce using rule 20 (array -> ID .)
    NL              reduce using rule 20 (array -> ID .)
    SIGN            reduce using rule 20 (array -> ID .)


state 29

    (40) expression -> MINUS expression .
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . DIVIDE CONSTANT
    (37) expression -> expression . DIVIDE INTEGER
    (38) expression -> expression . TIMES expression
    (41) expression -> expression . TRANSPOSE

    PLUS            reduce using rule 40 (expression -> MINUS expression .)
    MINUS           reduce using rule 40 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 40 (expression -> MINUS expression .)
    TIMES           reduce using rule 40 (expression -> MINUS expression .)
    NL              reduce using rule 40 (expression -> MINUS expression .)
    EQ              reduce using rule 40 (expression -> MINUS expression .)
    LEQ             reduce using rule 40 (expression -> MINUS expression .)
    GEQ             reduce using rule 40 (expression -> MINUS expression .)
    RPAREN          reduce using rule 40 (expression -> MINUS expression .)
    COMMA           reduce using rule 40 (expression -> MINUS expression .)
    TRANSPOSE       shift and go to state 41

  ! TRANSPOSE       [ reduce using rule 40 (expression -> MINUS expression .) ]
  ! PLUS            [ shift and go to state 44 ]
  ! MINUS           [ shift and go to state 46 ]
  ! DIVIDE          [ shift and go to state 40 ]
  ! TIMES           [ shift and go to state 42 ]


state 30

    (26) idlist -> ID .

    ID              reduce using rule 26 (idlist -> ID .)
    NL              reduce using rule 26 (idlist -> ID .)


state 31

    (13) create -> DIMENSIONS idlist .
    (25) idlist -> idlist . ID

    NL              reduce using rule 13 (create -> DIMENSIONS idlist .)
    ID              shift and go to state 54


state 32

    (17) create -> PARAMETERS arraylist .
    (27) arraylist -> arraylist . array
    (19) array -> . ID LPAREN dimlist RPAREN
    (20) array -> . ID

    NL              reduce using rule 17 (create -> PARAMETERS arraylist .)
    ID              shift and go to state 28

    array                          shift and go to state 55

state 33

    (28) arraylist -> array .

    ID              reduce using rule 28 (arraylist -> array .)
    NL              reduce using rule 28 (arraylist -> array .)


state 34

    (12) create -> DIMENSION ID .

    NL              reduce using rule 12 (create -> DIMENSION ID .)


state 35

    (5) statements -> statement NL .
